@@ -1,6 +1,6 @@
 
-R version 2.4.1 (2006-12-18)
-Copyright (C) 2006 The R Foundation for Statistical Computing
+R version 2.5.0 Under development (unstable) (2007-02-04 r40641)
+Copyright (C) 2007 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -273,4 +273,24 @@ Number of observations:  412
 [[5]]
 [1] 0.3990385 0.3798077 0.2211538
 
+> 
+> ### check different user interfaces
+> data("iris")
+> x <- as.matrix(iris[,colnames(iris) != "Species"])
+> y <- iris[,"Species"]
+> newx <- x
+> 
+> ls <- LearningSample(x, y)
+> p1 <- unlist(treeresponse(ctree(Species ~ ., data = iris), newdata = as.data.frame(newx)))
+> p2 <- unlist(treeresponse(ctreefit(ls, control = ctree_control()), newdata = as.matrix(newx)))
+> stopifnot(identical(max(abs(p1 - p2)), 0))
+> 
+> set.seed(29)
+> p1 <- unlist(treeresponse(cforestfit(ls, control = cforest_control(mtry = 1)), newdata = as.matrix(newx)))
+There were 12 warnings (use warnings() to see them)
+> set.seed(29)
+> p2 <- unlist(treeresponse(cforest(Species ~ ., data = iris, control = cforest_control(mtry = 1)), 
++              newdata = as.data.frame(newx)))
+There were 12 warnings (use warnings() to see them)
+> stopifnot(identical(max(abs(p1 - p2)), 0))
 > 
