@@ -1,6 +1,6 @@
 
-R version 2.4.1 (2006-12-18)
-Copyright (C) 2006 The R Foundation for Statistical Computing
+R version 2.5.0 Under development (unstable) (2007-02-04 r40641)
+Copyright (C) 2007 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -141,4 +141,28 @@ Error in model@fit(data, ...) : cannot set up 3 surrogate splits with only 1 inp
 > airOzoSol2 <- ctree(Solar.R + Ozone ~ Wind + Temp + Month + Day,
 +                     data = airq)
 > stopifnot(isequal(airOzoSol1@where, airOzoSol2@where))
+> 
+> ### one variable with all values missing
+> dat <- data.frame(y = rnorm(100), x1 = runif(100), x2 = rep(NA, 100))
+> ctree(y ~ x1 + x2, data = dat)
+
+	 Conditional inference tree with 1 terminal nodes
+
+Response:  y 
+Inputs:  x1, x2 
+Number of observations:  100 
+
+1)*  weights = 100 
+> 
+> ### one factor with only one level
+> dat$x2 <- factor(rep(0, 100))
+> ctree(y ~ x1 + x2, data = dat)
+
+	 Conditional inference tree with 1 terminal nodes
+
+Response:  y 
+Inputs:  x1, x2 
+Number of observations:  100 
+
+1)*  weights = 100 
 > 
